--- a/asp_net_core/MVCLearn/Views/Product/Index.cshtml
+++ b/asp_net_core/MVCLearn/Views/Product/Index.cshtml
@@ -9,11 +9,20 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width">
         <title>Product page</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <style>
+            body{
+                margin: auto;
+            }
+        </style>
     </head>
     <body>
         <h1>Product List</h1>
-        <table style="border: 1px solid black;">
-            <thead>
+        <table class="table table-borderless">
+        <thead>
             <tr>
                 <th>Id</th>
                 <th>Name</th>
