--- a/asp_net_core/MVCLearn/Views/Shared/_Layout.cshtml
+++ b/asp_net_core/MVCLearn/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - MVCLearn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy;opyright: 2010 -@DateTime.Now.Year.ToString() - MVCLearn - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
