--- a/asp_net_core/MVCLearn/Views/Product/Index.cshtml
+++ b/asp_net_core/MVCLearn/Views/Product/Index.cshtml
@@ -1,7 +1,7 @@
 @using MVCLearn.Models;
 @model List<ProductModel>;
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <!DOCTYPE html>
 <html>
