--- a/asp_net_core/MVCLearn/Views/Product/Create.cshtml
+++ b/asp_net_core/MVCLearn/Views/Product/Create.cshtml
@@ -1,5 +1,5 @@
-@model MVCLearn.Models.Product;
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@model MVCLearn.Models.ProductEditModel;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers;
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,26 +10,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create a simple html form</title>
+   <style>
+       .field-validation-error{
+           color :red;
+       }
+   </style>
 </head>
 <body>
     <form action="/Product/Create" method="post">
         <label for="Name">Name:</label>
-        <input type="text" id="Name" name="Name"><br>
+        <input type="text" id="Name" name="Name">
+        <span class="field-validation-error" asp-validation-for="Name"></span><br>
         <label for="Rate">Rate:</label>
         <input type="text" id="Rate" name="Rate"><br>
-        <label for=".Rating">Rating:</label>
+        <label for="Rating">Rating:</label>
         <input type="text" id="Rating" name="Rating"><br>
+        <label for="CreatedDate">CreateDate:</label>
+        <input type="date" id="CreatedDate" name="CreatedDate"><br>
+       <!-- <label for="Email">Email:</label>
+        <input type="text" id="Email" name="Email"><br> -->
         <input type="submit" name="submit">
     </form>
     <h2>form use TagHelper</h2>
-    <form asp-action="Create" asp-controller="Product">
+    <form asp-action="Create" asp-controller="Product" method="post">
         <label asp-for="Name">Name:</label>
-        <input type="text" asp-for="Name">
+        <input asp-for="Name">
+        <span class="field-validation-error" asp-validation-for="Name"></span><br>
         <label asp-for="Rate">Rate:</label>
-        <input type="text" asp-for="Rate">
+        <input asp-for="Rate" asp-format="{0:N2}">
         <label asp-for="Rating">Rating:</label>
-        <input type="text" asp-for="Rating">
+        <input asp-for="Rating">
+        <label asp-for="CreatedDate"></label>
+        <input type="date" id="CreatedDate" name="CreatedDate" >
+      <!--<label asp-for="Email">Email:</label>
+        <input asp-for="Email"> -->
         <input type="submit" name="submit">
     </form>
 </body>
