--- a/asp_net_core/MVCLearn/Views/Product/Index2.cshtml
+++ b/asp_net_core/MVCLearn/Views/Product/Index2.cshtml
@@ -1,3 +1,4 @@
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 
@@ -7,10 +8,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build a simple html form</title>
+    <environment include="Development">
+                 <script src="~/lib/jquery/dist/jquery-3.5.1.js"></script>
+
+    </environment>
+    <!-- exclude has a priority over include
+        <environment include="Development,Staging"  exclude="Development"> 
+         <script src="~/lib/jquery/dist/jquery-3.5.1.min.js"></script>
+    </environment> -->
+
+    <environment exclude="Development"> 
+         <script src="~/lib/jquery/dist/jquery-3.5.1.min.js"></script>
+    </environment>
+     
 </head>
 <body>
-    <h2>Product Index2 page</h2>
-    <a href="/product/Create">Create</a>
+    <h2>Product</h2>
+   
+    <a href="/product/Create">Create new Product</a>
 </body>
 </html>
